# templates

./: README.md
c++/cmake/: CMakeLists.txt
c++/cmake/exe/project/: CMakeLists.txt
c++/cmake/project/: .project  conanfile.txt
js/node/webapp/: .eslintrc.json  package.json
js/node/webapp/src/client/: index.js
js/node/webapp/src/server/: index.js  render-app.js
js/node/webapp/src/shared/: config.js
